--- a/avStream/avStream.vcxproj.filters
+++ b/avStream/avStream.vcxproj.filters
@@ -43,6 +43,15 @@
       <Filter>Generated Files</Filter>
     </ClCompile>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="src\ImageWidget.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug\moc_ImageWidget.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Release\moc_ImageWidget.cpp">
+      <Filter>Generated Files\Release</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="src\AvStream.h">
@@ -55,6 +64,9 @@
       <Filter>src</Filter>
     </CustomBuild>
     <CustomBuild Include="AvStream.qrc" />
+    <CustomBuild Include="src\ImageWidget.h">
+      <Filter>src</Filter>
+    </CustomBuild>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GeneratedFiles\ui_AvStream.h">
