--- a/avStream/avStream.vcxproj
+++ b/avStream/avStream.vcxproj
@@ -17,6 +17,9 @@
     <ClCompile Include="src\AudioDevice.cpp" />
     <ClCompile Include="src\AvStream.cpp" />
     <ClCompile Include="src\AvThread.cpp" />
+    <ClCompile Include="src\comm_func.cpp" />
+    <ClCompile Include="src\IPCommon.cpp" />
+    <ClCompile Include="src\Rtsp.cpp" />
     <ClCompile Include="src\ImageWidget.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -28,12 +31,16 @@
   <ItemGroup>
     <QtMoc Include="src\ImageWidget.h" />
     <QtMoc Include="src\AudioDevice.h" />
-    <QtMoc Include="src\AvStream.h" />
     <QtMoc Include="src\AvThread.h" />
+    <QtMoc Include="src\Rtsp.h" />
+    <QtMoc Include="src\AvStream.h" />
     <QtMoc Include="httpExt\HttpExtSessions.h" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="httpExt\UrlParse.h" />
+    <ClInclude Include="src\comm_func.h" />
+    <ClInclude Include="src\IPCommon.h" />
+    <ClInclude Include="src\rtsp_os.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{B12702AD-ABFB-343A-A199-8E24837244A3}</ProjectGuid>
